# ethers-reth

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: bench_utils.rs
examples/: generate_testdata.rs
examples/contracts/: mod.rs  weth9.json  weth9.rs  weth9.sol
src/: defaults.rs  init.rs  init_api.rs  lib.rs  middleware.rs  noop.rs  provider.rs  reth_api.rs  reth_filter.rs  utils.rs
src/type_conversions/: access_list.rs  block.rs  mod.rs  primitives.rs  withdraw.rs
src/type_conversions copy/: access_list.rs  block.rs  primitives.rs  withdraw.rs
src/type_conversions copy/rpc/: block.rs  fee.rs  filter.rs  log.rs  trace.rs
src/type_conversions/rpc/: account.rs  block.rs  call.rs  fee.rs  filter.rs  mod.rs  trace.rs  transaction.rs
testdata/: expected_access_list.json  expected_block.json  expected_block_with_txs.json  expected_code.json  expected_debug_trace_block_by_hash.json  expected_debug_trace_call.json  expected_debug_trace_transaction.json  expected_fee_history.json  expected_logs.json  expected_trace_block.json  expected_trace_call.json  expected_trace_call_many.json  expected_trace_get.json  expected_trace_raw_transaction.json  expected_trace_replay_block_transactions.json  expected_trace_replay_transaction.json  expected_trace_transaction.json  expected_transaction.json  expected_transaction_receipt.json
tests/: test_middleware.rs  test_utils.rs
tests/it/: test_middleware.rs  test_utils.rs
