[package]
name = "ethers-reth"
version = "0.1.0"
edition = "2021"


[dependencies]
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", features = ["test-utils"] , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus" , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = ["test-utils"] , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = ["test-utils"] , rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}
reth-payload-builder ={ git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev="62e7d98202a10bf1333836bf74f9e7e1827aa6d1"}


# ethers
ethers = { version = "2.0.10", default-features = false, features = ["ipc", "ws", "rustls", "ethers-solc"] }

# Async
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"

# Misc
eyre = "0.6.8"
thiserror = "1.0.40"

jsonrpsee = { version = "0.20", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serial_test = "2.0.0"

[patch.crates-io]
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }

[dev-dependencies]
pretty_assertions = "1.4.0"
