[package]
name = "ethers-reth"
version = "0.1.0"
edition = "2021"


[dependencies]
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", features = ["test-utils"] , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus" , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = ["test-utils"] , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = ["test-utils"] , rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}
reth-payload-builder ={ git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev="0f14ec4007f2cc7d5838d3a04cb531d8c8f72dc7"}


# ethers
ethers = { version = "=2.0.8", default-features = false, features = ["ipc", "ws", "rustls", "ethers-solc"] }
ethers-contract = "=2.0.8"

# Async
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"

# Misc
eyre = "0.6.8"
thiserror = "1.0.40"

jsonrpsee = { version = "0.20", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serial_test = "2.0.0"

[patch.crates-io]
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }

[dev-dependencies]
pretty_assertions = "1.4.0"
