[package]
name = "ethers-reth"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
#revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
#revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }

[dependencies]
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "1b16d80" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "1b16d80" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "1b16d80" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "1b16d80" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "1b16d80" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "1b16d80" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "1b16d80" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "1b16d80" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", features = ["test-utils"], rev = "1b16d80" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "1b16d80" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "1b16d80" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "1b16d80" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = ["test-utils"], rev = "1b16d80" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = ["test-utils"], rev = "1b16d80" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "1b16d80" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "1b16d80" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "1b16d80" }


# ethers
ethers = { version = "2.0.10", features = [
  "ipc",
  "ws",
  "rustls",
  "ethers-solc",
] }


# Async
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.68"

# Misc
eyre = "0.6.8"
thiserror = "1.0.40"

c-kzg = { git = "https://github.com/ethereum/c-kzg-4844", rev = "f5f6f863d475847876a2bd5ee252058d37c3a15d" }

jsonrpsee = { version = "0.20", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serial_test = "2.0.0"


[dev-dependencies]
pretty_assertions = "1.4.0"
